Changed HSPI to VSPI and added chaser and color blending mode.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,8 +13,7 @@
             "type": "shell",
             "command": "make",
             "args": [
-                "-j8",
-                "all"
+                "-j8"
             ]
         },
         {
@@ -32,6 +31,17 @@
             "command": "make",
             "args": [
                 "-j8",
+                "monitor"
+            ]
+        },
+        {
+            "label": "all",
+            "type": "shell",
+            "command": "make",
+            "args": [
+                "-j8",
+                "all",
+                "flash",
                 "monitor"
             ]
         }
